--- a/src/asset/globals.scss
+++ b/src/asset/globals.scss
@@ -3,6 +3,8 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css?family=Quicksand&display=swap");
 
+
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -22,4 +24,21 @@
   font-style: normal;
   letter-spacing: -0.01em;
   line-height: 150%;
+}
+
+p {
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.015em;
+}
+
+.cover-customer {
+  background-color: #5d5fef;
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url(/image/covercustomer.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right;
+  border-radius: 6px;
+  height: 167px;
 }
