--- a/src/asset/globals.scss
+++ b/src/asset/globals.scss
@@ -35,7 +35,7 @@ p {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
     url(/image/covercustomer.png);
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: auto;
   background-position: right;
   border-radius: 6px;
   height: 167px;
